add ohm collateral

--- a/Defillama_Backtester_v1_larry.ipynb
+++ b/Defillama_Backtester_v1_larry.ipynb
@@ -14,11 +14,11 @@
         "    token0:\n",
         "        input: select\n",
         "        label: Please select a collateral asset\n",
-        "        choices: ['MIM-3CRV (Convex)', 'FRAX-USDC (Convex)', 'ALUSD-3CRV (Convex)', 'DAI (Compound)', 'USDC (Compound)', 'USDC (Aave)', 'USDT (Aave)', 'BUSD (Aave)', 'USDC-USDT (Uniswap V3)', 'BUSD-USDC (Uniswap V3)', 'USDC-USDT (Uniswap V2)', 'STETH']\n",
+        "        choices: ['MIM-3CRV (Convex)', 'FRAX-USDC (Convex)', 'ALUSD-3CRV (Convex)', 'DAI (Compound)', 'USDC (Compound)', 'OHM-FRAXBP (Curve)', 'USDC (Aave)', 'USDT (Aave)', 'BUSD (Aave)', 'USDC-USDT (Uniswap V3)', 'BUSD-USDC (Uniswap V3)', 'USDC-USDT (Uniswap V2)', 'OHM-DAI (Balancer)', 'OHM-WETH (Balancer)', 'STETH']\n",
         "    token1:\n",
         "        input: select\n",
         "        label: Please select a collateral asset\n",
-        "        choices: ['MIM-3CRV (Convex)', 'FRAX-USDC (Convex)', 'ALUSD-3CRV (Convex)', 'DAI (Compound)', 'USDC (Compound)', 'USDC (Aave)', 'USDT (Aave)', 'BUSD (Aave)', 'USDC-USDT (Uniswap V3)', 'BUSD-USDC (Uniswap V3)', 'USDC-USDT (Uniswap V2)', 'STETH']\n",
+        "        choices: ['MIM-3CRV (Convex)', 'FRAX-USDC (Convex)', 'ALUSD-3CRV (Convex)', 'DAI (Compound)', 'USDC (Compound)', 'OHM-FRAXBP (Curve)', 'USDC (Aave)', 'USDT (Aave)', 'BUSD (Aave)', 'USDC-USDT (Uniswap V3)', 'BUSD-USDC (Uniswap V3)', 'USDC-USDT (Uniswap V2)', 'OHM-DAI (Balancer)', 'OHM-WETH (Balancer)', 'STETH']\n",
         "---"
       ]
     },
@@ -38,17 +38,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "29b6f635",
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "dict_keys(['MIM-3CRV (Convex)', 'FRAX-USDC (Convex)', 'ALUSD-3CRV (Convex)', 'DAI (Compound)', 'USDC (Compound)', 'USDC (Aave)', 'USDT (Aave)', 'BUSD (Aave)', 'USDC-USDT (Uniswap V3)', 'BUSD-USDC (Uniswap V3)', 'USDC-USDT (Uniswap V2)', 'STETH'])"
+              "dict_keys(['MIM-3CRV (Convex)', 'FRAX-USDC (Convex)', 'ALUSD-3CRV (Convex)', 'DAI (Compound)', 'USDC (Compound)', 'OHM-FRAXBP (Curve)', 'USDC (Aave)', 'USDT (Aave)', 'BUSD (Aave)', 'USDC-USDT (Uniswap V3)', 'BUSD-USDC (Uniswap V3)', 'USDC-USDT (Uniswap V2)', 'OHM-DAI (Balancer)', 'OHM-WETH (Balancer)', 'STETH'])"
             ]
           },
-          "execution_count": 1,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -60,12 +60,15 @@
         "    \"ALUSD-3CRV (Convex)\": \"f11aa021-e4c1-49f9-8004-9cf5625dedae\",\n",
         "    \"DAI (Compound)\": \"cc110152-36c2-4e10-9c12-c5b4eb662143\",\n",
         "    \"USDC (Compound)\": \"7da72d09-56ca-4ec5-a45f-59114353e487\",\n",
+        "    \"OHM-FRAXBP (Curve)\": \"652ec67f-20b1-4138-8fc3-d78458f47e1a\",\n",
         "    \"USDC (Aave)\": \"a349fea4-d780-4e16-973e-70ca9b606db2\",\n",
         "    \"USDT (Aave)\": \"60d657c9-5f63-4771-a85b-2cf8d507ec00\",\n",
         "    \"BUSD (Aave)\": \"fd700196-ace0-4adc-8c91-6da04acb4ec3\",\n",
         "    \"USDC-USDT (Uniswap V3)\": \"e737d721-f45c-40f0-9793-9f56261862b9\",\n",
         "    \"BUSD-USDC (Uniswap V3)\": \"4bb8783d-9919-4a8e-980e-546401a67f63\",\n",
         "    \"USDC-USDT (Uniswap V2)\": \"e2c09021-0aa8-42b6-a596-5422c2e35399\",\n",
+        "    \"OHM-DAI (Balancer)\": \"645dffc4-fe90-4c8b-9c17-fd8f2143a5fe\",\n",
+        "    \"OHM-WETH (Balancer)\": \"ad68c6ce-699a-4c00-986f-5f92e38c1ac1\",\n",
         "    \"STETH\": \"747c1d2a-c668-4682-b9f9-296708a3dd90\"\n",
         "}"
       ]
