--- a/Defillama_Backtester_v1_larry.ipynb
+++ b/Defillama_Backtester_v1_larry.ipynb
@@ -564,7 +564,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.16"
+      "version": "3.9.16 (main, Jan 27 2023, 19:06:42) \n[Clang 13.1.6 (clang-1316.0.21.2.5)]"
     },
     "vscode": {
       "interpreter": {
