enable weight selection

--- a/Defillama_Backtester_v2_larry.ipynb
+++ b/Defillama_Backtester_v2_larry.ipynb
@@ -15,17 +15,17 @@
         "        label: Use custom basket weights (default is income-weighted)\n",
         "        input: checkbox\n",
         "        value: False    \n",
-        "    token0:\n",
+        "    basket_weights:\n",
+        "        input: text\n",
+        "        label: Basket weights (comma-separated as %)\n",
+        "    basket_tokens:\n",
         "        input: select\n",
-        "        label: Please select a collateral asset\n",
+        "        label: Select collateral assets\n",
+        "        multi: True\n",
         "        choices: ['MIM-3CRV (Convex)', 'FRAX-USDC (Convex)', 'ALUSD-3CRV (Convex)', 'OHM-FRAXBP (Curve)', 'DAI (Compound)', 'USDC (Compound)', 'USDC (Aave)', 'USDT (Aave)', 'BUSD (Aave)', 'USDC-USDT (Uniswap V3)', 'BUSD-USDC (Uniswap V3)', 'USDC-USDT (Uniswap V2)', 'OHM-DAI (Balancer)', 'OHM-WETH (Balancer)', 'USDC (Goldfinch)', 'USDC (Stargate)', 'STETH']\n",
-        "    token1:\n",
+        "    reference_token:\n",
         "        input: select\n",
-        "        label: Please select a collateral asset\n",
-        "        choices: ['MIM-3CRV (Convex)', 'FRAX-USDC (Convex)', 'ALUSD-3CRV (Convex)', 'OHM-FRAXBP (Curve)', 'DAI (Compound)', 'USDC (Compound)', 'USDC (Aave)', 'USDT (Aave)', 'BUSD (Aave)', 'USDC-USDT (Uniswap V3)', 'BUSD-USDC (Uniswap V3)', 'USDC-USDT (Uniswap V2)', 'OHM-DAI (Balancer)', 'OHM-WETH (Balancer)', 'USDC (Goldfinch)', 'USDC (Stargate)', 'STETH']\n",
-        "    token2:\n",
-        "        input: select\n",
-        "        label: Please select a collateral asset\n",
+        "        label: Select reference asset\n",
         "        choices: ['MIM-3CRV (Convex)', 'FRAX-USDC (Convex)', 'ALUSD-3CRV (Convex)', 'OHM-FRAXBP (Curve)', 'DAI (Compound)', 'USDC (Compound)', 'USDC (Aave)', 'USDT (Aave)', 'BUSD (Aave)', 'USDC-USDT (Uniswap V3)', 'BUSD-USDC (Uniswap V3)', 'USDC-USDT (Uniswap V2)', 'OHM-DAI (Balancer)', 'OHM-WETH (Balancer)', 'USDC (Goldfinch)', 'USDC (Stargate)', 'STETH']\n",
         "---"
       ]
@@ -46,21 +46,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "29b6f635",
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "dict_keys(['MIM-3CRV (Convex)', 'FRAX-USDC (Convex)', 'ALUSD-3CRV (Convex)', 'OHM-FRAXBP (Curve)', 'DAI (Compound)', 'USDC (Compound)', 'USDC (Aave)', 'USDT (Aave)', 'BUSD (Aave)', 'USDC-USDT (Uniswap V3)', 'BUSD-USDC (Uniswap V3)', 'USDC-USDT (Uniswap V2)', 'OHM-DAI (Balancer)', 'OHM-WETH (Balancer)', 'USDC (Goldfinch)', 'USDC (Stargate)', 'STETH'])"
-            ]
-          },
-          "execution_count": 2,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "pool_dict = {\n",
         "    \"MIM-3CRV (Convex)\": \"8a20c472-142c-4442-b724-40f2183c073e\",\n",
@@ -105,18 +94,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "0bd7a91e",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "token0 = None\n",
-        "token1 = None\n",
-        "token2 = None"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "id": "13522a10",
       "metadata": {
         "id": "13522a10",
@@ -130,9 +107,38 @@
         "is_stablecoin = True\n",
         "min_tvl = 80000000\n",
         "top_x = 15\n",
-        "sort_by = 'apy' # or tvlUsd or apy\n",
+        "sort_by = 'apy' # or tvlUsd or apy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "cfe6871c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "basket_tokens = []\n",
+        "reference_token = \"USDC (Compound)\"\n",
+        "basket_weights = \"\"\n",
+        "is_custom_weights = False"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "53875aff",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "using_custom_weights = is_custom_weights and len(basket_tokens) == len(basket_weights.split(','))\n",
         "\n",
-        "benchmark = ['cc110152-36c2-4e10-9c12-c5b4eb662143'] # Compound cUSDC"
+        "benchmark = pool_dict[reference_token]\n",
+        "bespoke = [pool_dict[token] for token in basket_tokens]\n",
+        "weights = [float(weight) if using_custom_weights else 0 for weight in basket_weights.split(',')]\n",
+        "normalized_weights = [weight/sum(weights) for weight in weights if using_custom_weights]\n",
+        "\n",
+        "pool_symbols = eth_pools[eth_pools.pool.isin(bespoke)][['project','symbol','pool', 'tvlUsd','apy']]\n",
+        "benchmark_symbols = eth_pools[eth_pools.pool == benchmark][['project','symbol','pool', 'tvlUsd','apy']]"
       ]
     },
     {
@@ -152,7 +158,7 @@
         "\n",
         "    # calc for income weighted basket based on current TVL and APY \n",
         "    df['income_basket_weight'] = round(df.income / sum(df.income),2)\n",
-        "\n",
+        "        \n",
         "    # concat the pool symbol to show pool and protocol\n",
         "    df['pool (protocol)'] = df.symbol + \" (\" + df.project + \")\"\n",
         "\n",
@@ -231,19 +237,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "cb4a7a89",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "bespoke = [pool_dict[token0], pool_dict[token1] ]\n",
-        "\n",
-        "pool_symbols = eth_pools[eth_pools.pool.isin(bespoke)][['project','symbol','pool', 'tvlUsd','apy']]\n",
-        "benchmark_symbols = eth_pools[eth_pools.pool.isin(benchmark)][['project','symbol','pool', 'tvlUsd','apy']]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "id": "e1ebd1f8",
       "metadata": {
         "id": "e1ebd1f8"
@@ -251,6 +244,9 @@
       "outputs": [],
       "source": [
         "pool_symbols = symbol_ops(pool_symbols)\n",
+        "if(using_custom_weights):\n",
+        "    pool_symbols['income_basket_weight'] = normalized_weights\n",
+        "    \n",
         "benchmark_symbols = symbol_ops(benchmark_symbols)\n"
       ]
     },
