change line color

--- a/Defillama_Backtester_v2_larry.ipynb
+++ b/Defillama_Backtester_v2_larry.ipynb
@@ -345,7 +345,7 @@
         "_ = sns.lineplot(x = \"timestamp\", y = \"total_portfolio_yield\",\n",
         "             data = df)\n",
         "_ = sns.lineplot(x = \"timestamp\", y = \"total_portfolio_yield\",\n",
-        "                data = df_benchmark)\n",
+        "                data = df_benchmark, color=\"orange\")\n",
         "_ = plt.title('Benchmark Yield Over Time')\n",
         "_ = plt.ylabel('APY')\n",
         "_ = plt.xlabel('Date')\n",
