chore: add new pools

--- a/Defillama_Backtester_v2_larry.ipynb
+++ b/Defillama_Backtester_v2_larry.ipynb
@@ -22,11 +22,11 @@
     "        input: select\n",
     "        label: Select collateral assets\n",
     "        multi: True\n",
-    "        choices: ['DAI-USDC-USDT (curve)', 'FRAX-USDC (curve)', 'FRAX-3CRV (curve)', 'FRAX-3CRV (convex-finance)', 'FRAX-USDC (convex-finance)', 'DAI (compound)', 'USDC (compound)', 'WBTC (compound)', 'ETH (compound)', 'USDC (aave-v2)', 'DAI-USDC (uniswap-v3)', 'DAI-USDC (arrakis-finance)', 'MIM-3CRV (curve)', 'MIM-3CRV (convex-finance)', 'FRAX-USDC (uniswap-v3)', 'FPI-FRAX (frax)', 'USDC (goldfinch)', 'USDT (aave-v2)', 'USDT (compound)', 'USDC (morpho-aave)', 'DAI-USDC-USDT-SUSD (curve)', 'DAI (aave-v2)', 'WBTC (aave-v2)', 'ETH (aave-v2)', 'USDC-USDT (uniswap-v3)', 'DAI-USDC-USDT-SUSD (convex-finance)', 'LUSD-3CRV (curve)', 'TUSD-3CRV (curve)', 'TUSD-3CRV (convex-finance)', 'USDC (euler)', 'DOLA-FRAXBP (curve)', 'DOLA-FRAXBP (convex-finance)', 'USDC-EURS (curve)', 'USDC-EURS (convex-finance)', 'OUSD-3CRV (curve)', 'OUSD-3CRV (convex-finance)', 'USDC (compound-v3)', 'DAI-USDC (uniswap-v2)', 'ALUSD-FRAXBP (curve)', 'ALUSD-3CRV (curve)', 'ALUSD-3CRV (convex-finance)', 'DAI (morpho-compound)', 'USDT (euler)', 'DAI-USDC-USDT (convex-finance)', 'NUSDC (notional)', 'BEAN-3CRV (curve)', 'USDC (morpho-compound)', 'DAI (uwu-lend)', 'BUSD-USDC (uniswap-v3)', 'ADAI-AUSDC-AUSDT (curve)', 'CDAI-CUSDC (curve)', 'DAI-FRAX (uniswap-v3)', 'stETH (lido)', 'ETH-STETH (curve)', 'ETH-STETH (convex-finance)', 'WSTETH-WETH (balancer)', 'WSTETH-WETH (aura)', 'USDT-WBTC-WETH (curve)', 'USDT-WBTC-WETH (convex)']\n",
+    "        choices: ['CBETH (coinbase-wrapped-staked-eth)', 'RETH (rocket-pool)', 'SFRXETH (frax-ether)', 'SETH2 (stakewise)', 'ANKRETH (ankr)', 'USDC (flux-finance)', 'DAI (flux-finance)', 'USDT (flux-finance)', 'DAI-USDC-USDT (curve)', 'FRAX-USDC (curve)', 'FRAX-3CRV (curve)', 'FRAX-3CRV (convex-finance)', 'FRAX-USDC (convex-finance)', 'DAI (compound)', 'USDC (compound)', 'WBTC (compound)', 'ETH (compound)', 'USDC (aave-v2)', 'DAI-USDC (uniswap-v3)', 'DAI-USDC (arrakis-finance)', 'MIM-3CRV (curve)', 'MIM-3CRV (convex-finance)', 'FRAX-USDC (uniswap-v3)', 'FPI-FRAX (frax)', 'USDC (goldfinch)', 'USDT (aave-v2)', 'USDT (compound)', 'USDC (morpho-aave)', 'DAI-USDC-USDT-SUSD (curve)', 'DAI (aave-v2)', 'WBTC (aave-v2)', 'ETH (aave-v2)', 'USDC-USDT (uniswap-v3)', 'DAI-USDC-USDT-SUSD (convex-finance)', 'LUSD-3CRV (curve)', 'TUSD-3CRV (curve)', 'TUSD-3CRV (convex-finance)', 'USDC (euler)', 'DOLA-FRAXBP (curve)', 'DOLA-FRAXBP (convex-finance)', 'USDC-EURS (curve)', 'USDC-EURS (convex-finance)', 'OUSD-3CRV (curve)', 'OUSD-3CRV (convex-finance)', 'USDC (compound-v3)', 'DAI-USDC (uniswap-v2)', 'ALUSD-FRAXBP (curve)', 'ALUSD-3CRV (curve)', 'ALUSD-3CRV (convex-finance)', 'DAI (morpho-compound)', 'USDT (euler)', 'DAI-USDC-USDT (convex-finance)', 'NUSDC (notional)', 'BEAN-3CRV (curve)', 'USDC (morpho-compound)', 'DAI (uwu-lend)', 'BUSD-USDC (uniswap-v3)', 'ADAI-AUSDC-AUSDT (curve)', 'CDAI-CUSDC (curve)', 'DAI-FRAX (uniswap-v3)', 'stETH (lido)', 'ETH-STETH (curve)', 'ETH-STETH (convex-finance)', 'WSTETH-WETH (balancer)', 'WSTETH-WETH (aura)', 'USDT-WBTC-WETH (curve)', 'USDT-WBTC-WETH (convex)']\n",
     "    reference_token:\n",
     "        input: select\n",
     "        label: Select reference asset\n",
-    "        choices: ['DAI-USDC-USDT (curve)', 'FRAX-USDC (curve)', 'FRAX-3CRV (curve)', 'FRAX-3CRV (convex-finance)', 'FRAX-USDC (convex-finance)', 'DAI (compound)', 'USDC (compound)', 'WBTC (compound)', 'ETH (compound)', 'USDC (aave-v2)', 'DAI-USDC (uniswap-v3)', 'DAI-USDC (arrakis-finance)', 'MIM-3CRV (curve)', 'MIM-3CRV (convex-finance)', 'FRAX-USDC (uniswap-v3)', 'FPI-FRAX (frax)', 'USDC (goldfinch)', 'USDT (aave-v2)', 'USDT (compound)', 'USDC (morpho-aave)', 'DAI-USDC-USDT-SUSD (curve)', 'DAI (aave-v2)', 'WBTC (aave-v2)', 'ETH (aave-v2)', 'USDC-USDT (uniswap-v3)', 'DAI-USDC-USDT-SUSD (convex-finance)', 'LUSD-3CRV (curve)', 'TUSD-3CRV (curve)', 'TUSD-3CRV (convex-finance)', 'USDC (euler)', 'DOLA-FRAXBP (curve)', 'DOLA-FRAXBP (convex-finance)', 'USDC-EURS (curve)', 'USDC-EURS (convex-finance)', 'OUSD-3CRV (curve)', 'OUSD-3CRV (convex-finance)', 'USDC (compound-v3)', 'DAI-USDC (uniswap-v2)', 'ALUSD-FRAXBP (curve)', 'ALUSD-3CRV (curve)', 'ALUSD-3CRV (convex-finance)', 'DAI (morpho-compound)', 'USDT (euler)', 'DAI-USDC-USDT (convex-finance)', 'NUSDC (notional)', 'BEAN-3CRV (curve)', 'USDC (morpho-compound)', 'DAI (uwu-lend)', 'BUSD-USDC (uniswap-v3)', 'ADAI-AUSDC-AUSDT (curve)', 'CDAI-CUSDC (curve)', 'DAI-FRAX (uniswap-v3)', 'stETH (lido)', 'ETH-STETH (curve)', 'ETH-STETH (convex-finance)', 'WSTETH-WETH (balancer)', 'WSTETH-WETH (aura)', 'USDT-WBTC-WETH (curve)', 'USDT-WBTC-WETH (convex)']\n",
+    "        choices: ['CBETH (coinbase-wrapped-staked-eth)', 'RETH (rocket-pool)', 'SFRXETH (frax-ether)', 'SETH2 (stakewise)', 'ANKRETH (ankr)', 'USDC (flux-finance)', 'DAI (flux-finance)', 'USDT (flux-finance)', 'DAI-USDC-USDT (curve)', 'FRAX-USDC (curve)', 'FRAX-3CRV (curve)', 'FRAX-3CRV (convex-finance)', 'FRAX-USDC (convex-finance)', 'DAI (compound)', 'USDC (compound)', 'WBTC (compound)', 'ETH (compound)', 'USDC (aave-v2)', 'DAI-USDC (uniswap-v3)', 'DAI-USDC (arrakis-finance)', 'MIM-3CRV (curve)', 'MIM-3CRV (convex-finance)', 'FRAX-USDC (uniswap-v3)', 'FPI-FRAX (frax)', 'USDC (goldfinch)', 'USDT (aave-v2)', 'USDT (compound)', 'USDC (morpho-aave)', 'DAI-USDC-USDT-SUSD (curve)', 'DAI (aave-v2)', 'WBTC (aave-v2)', 'ETH (aave-v2)', 'USDC-USDT (uniswap-v3)', 'DAI-USDC-USDT-SUSD (convex-finance)', 'LUSD-3CRV (curve)', 'TUSD-3CRV (curve)', 'TUSD-3CRV (convex-finance)', 'USDC (euler)', 'DOLA-FRAXBP (curve)', 'DOLA-FRAXBP (convex-finance)', 'USDC-EURS (curve)', 'USDC-EURS (convex-finance)', 'OUSD-3CRV (curve)', 'OUSD-3CRV (convex-finance)', 'USDC (compound-v3)', 'DAI-USDC (uniswap-v2)', 'ALUSD-FRAXBP (curve)', 'ALUSD-3CRV (curve)', 'ALUSD-3CRV (convex-finance)', 'DAI (morpho-compound)', 'USDT (euler)', 'DAI-USDC-USDT (convex-finance)', 'NUSDC (notional)', 'BEAN-3CRV (curve)', 'USDC (morpho-compound)', 'DAI (uwu-lend)', 'BUSD-USDC (uniswap-v3)', 'ADAI-AUSDC-AUSDT (curve)', 'CDAI-CUSDC (curve)', 'DAI-FRAX (uniswap-v3)', 'stETH (lido)', 'ETH-STETH (curve)', 'ETH-STETH (convex-finance)', 'WSTETH-WETH (balancer)', 'WSTETH-WETH (aura)', 'USDT-WBTC-WETH (curve)', 'USDT-WBTC-WETH (convex)']\n",
     "---"
    ]
   },
@@ -52,6 +52,14 @@
    "outputs": [],
    "source": [
     "pool_dict = {\n",
+    "    'CBETH (coinbase-wrapped-staked-eth)': '0f45d730-b279-4629-8e11-ccb5cc3038b4',\n",
+    "    'RETH (rocket-pool)': 'd4b3c522-6127-4b89-bedf-83641cdcd2eb',\n",
+    "    'SFRXETH (frax-ether)': '77020688-e1f9-443c-9388-e51ace15cc32',\n",
+    "    'SETH2 (stakewise)': '66958f46-1d06-4f83-9fab-bbec354049d8',\n",
+    "    'ANKRETH (ankr)': 'e201dbed-63fa-48e2-bfa2-f56e730167d2',\n",
+    "    'USDC (flux-finance)': 'fa4d7ee4-0001-4133-9e8d-cf7d5d194a91',\n",
+    "    'DAI (flux-finance)': 'ed227286-abb0-4a34-ada5-39f7ebd81afb',\n",
+    "    'USDT (flux-finance)': '6600934f-6323-447d-8a7d-67fbede8529d',\n",
     "    'DAI-USDC-USDT (curve)': '25171c4c-1877-449a-9f88-45a9f153ee31',\n",
     "    'FRAX-USDC (curve)': '3f6aa14f-eb0c-4738-bf74-8bc666f7d2b1',\n",
     "    'FRAX-3CRV (curve)': '8d989d6c-99ba-447e-8f3d-3aca98e993fd',\n",
@@ -413,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16 (main, Jan 27 2023, 19:06:42) \n[Clang 13.1.6 (clang-1316.0.21.2.5)]"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
